infrastructure_all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: entry-route
  namespace: default
spec:
  gateways:
  - knative-ingress-gateway.knative-serving.svc.cluster.local
  hosts:
  - "*"
  http:
  - match:
    - headers:
        x-service-version:
          exact: "v2"
    - uri:
        prefix: "/demo"
    rewrite:
      uri: "/demov2"
      authority: demo-node-app.default.example.com
    route:
      - destination:
          host: istio-ingressgateway.istio-system.svc.cluster.local
          subset: v2
        weight: 100
  - match:
    - uri:
        prefix: "/test"
    rewrite:
      uri: "/"
      authority: demo-node-app.default.example.com
    route:
      - destination:
          host: istio-ingressgateway.istio-system.svc.cluster.local
        weight: 100    
  - match:
    - uri:
        prefix: "/dummydata"
    rewrite:
      authority: datawarehouse.default.example.com
    route:
      - destination:
          host: istio-ingressgateway.istio-system.svc.cluster.local
        weight: 100   
  - match:
    - uri:
        prefix: "/webui"
    rewrite:
      uri: "/items"
      authority: webui.default.example.com
    route:
      - destination:
          host: istio-ingressgateway.istio-system.svc.cluster.local
        weight: 100   
  - match:
    - uri:
        prefix: "/"
    rewrite:
      authority: demo-node-app.default.example.com
    route:
      - destination:
          host: istio-ingressgateway.istio-system.svc.cluster.local
        weight: 100

---

apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: demo-node-app # Updating our existing route
  namespace: default
spec:
  traffic:
    - revisionName: demo-node-app-v1
      percent: 50
      #name: v1 # Adding a new named route for v1
    - revisionName: demo-node-app-v2
      percent: 50
      # Named route for v2 has been removed, since we don't need it anymore

---

apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: demo-node-app
  namespace: default
  labels:
    app: demo-node-app
spec:
  runLatest:
    configuration:
      revisionTemplate:
        # metadata:
        #   name: demo-node-app-v1
        spec:
          container:
            image: docker.io/pascalstieber/kubernetes_microservices:v1
          # ports:
          # - containerPort: 8080


---

# apiVersion: serving.knative.dev/v1alpha1
# kind: Configuration
# metadata:
#   name: demo-node-app
#   namespace: defaultk
#   labels:
#     app: demo-node-app
# spec:
#   revisionTemplate:
#     metadata:
#       name: demo-node-app-v2
#       labels:
#         knative.dev/type: container
#     spec:    
#       container:
#         image: docker.io/pascalstieber/kubernetes_microservices:v2
#         imagePullPolicy: Always
#         env:
#           - name: T_VERSION
#             value: "green"
# status:
#   latestCreatedRevisionName: demo-node-app-v2
#   latestReadyRevisionName: demo-node-app-v1
#   observedGeneration: 2
